// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metrics Collector collection should accumulate counter metrics 1`] = `
Object {
  "collection_interval_in_millis": "test-123",
  "concurrent_connections": 0,
  "event_loop_delay": 0.3764979839324951,
  "kibana": Object {
    "host": "test-123",
    "name": "test-123",
    "snapshot": false,
    "status": "green",
    "transport_address": "test-123:3000",
    "uuid": "test-123",
    "version": "test-123",
  },
  "last_updated": "2018-04-19T21:50:54.366Z",
  "os": Object {
    "cpu": Object {
      "load_average": Object {
        "15m": 1.81201171875,
        "1m": 1.97119140625,
        "5m": 1.90283203125,
      },
    },
    "mem": Object {
      "free_in_bytes": 12,
      "total_in_bytes": 24,
    },
    "uptime_ms": NaN,
  },
  "process": Object {
    "mem": Object {
      "external_in_bytes": 25028,
      "heap_max_in_bytes": 15548416,
      "heap_used_in_bytes": 12996392,
      "resident_set_size_in_bytes": 36085760,
    },
    "pid": 7777,
    "uptime_ms": 6666000,
  },
  "requests": Object {
    "disconnects": 0,
    "status_codes": Object {
      "200": 8,
    },
    "total": 8,
  },
  "response_times": Object {
    "avg_in_millis": 19,
    "max_in_millis": 19,
  },
  "sockets": Object {
    "http": Object {
      "total": 0,
    },
    "https": Object {
      "total": 0,
    },
  },
}
`;

exports[`Metrics Collector collection should accumulate counter metrics 2`] = `
Object {
  "collection_interval_in_millis": "test-123",
  "concurrent_connections": 0,
  "event_loop_delay": 0.7529959678649902,
  "kibana": Object {
    "host": "test-123",
    "name": "test-123",
    "snapshot": false,
    "status": "green",
    "transport_address": "test-123:3000",
    "uuid": "test-123",
    "version": "test-123",
  },
  "last_updated": "2018-04-19T21:50:54.366Z",
  "os": Object {
    "cpu": Object {
      "load_average": Object {
        "15m": 1.81201171875,
        "1m": 1.97119140625,
        "5m": 1.90283203125,
      },
    },
    "mem": Object {
      "free_in_bytes": 12,
      "total_in_bytes": 24,
    },
    "uptime_ms": NaN,
  },
  "process": Object {
    "mem": Object {
      "external_in_bytes": 25028,
      "heap_max_in_bytes": 15548416,
      "heap_used_in_bytes": 12996392,
      "resident_set_size_in_bytes": 36085760,
    },
    "pid": 7777,
    "uptime_ms": 6666000,
  },
  "requests": Object {
    "disconnects": 0,
    "status_codes": Object {
      "200": 16,
    },
    "total": 16,
  },
  "response_times": Object {
    "avg_in_millis": 38,
    "max_in_millis": 38,
  },
  "sockets": Object {
    "http": Object {
      "total": 0,
    },
    "https": Object {
      "total": 0,
    },
  },
}
`;

exports[`Metrics Collector collection should accumulate counter metrics 3`] = `
Object {
  "collection_interval_in_millis": "test-123",
  "concurrent_connections": 0,
  "event_loop_delay": 1.1294939517974854,
  "kibana": Object {
    "host": "test-123",
    "name": "test-123",
    "snapshot": false,
    "status": "green",
    "transport_address": "test-123:3000",
    "uuid": "test-123",
    "version": "test-123",
  },
  "last_updated": "2018-04-19T21:50:54.366Z",
  "os": Object {
    "cpu": Object {
      "load_average": Object {
        "15m": 1.81201171875,
        "1m": 1.97119140625,
        "5m": 1.90283203125,
      },
    },
    "mem": Object {
      "free_in_bytes": 12,
      "total_in_bytes": 24,
    },
    "uptime_ms": NaN,
  },
  "process": Object {
    "mem": Object {
      "external_in_bytes": 25028,
      "heap_max_in_bytes": 15548416,
      "heap_used_in_bytes": 12996392,
      "resident_set_size_in_bytes": 36085760,
    },
    "pid": 7777,
    "uptime_ms": 6666000,
  },
  "requests": Object {
    "disconnects": 0,
    "status_codes": Object {
      "200": 24,
    },
    "total": 24,
  },
  "response_times": Object {
    "avg_in_millis": 57,
    "max_in_millis": 57,
  },
  "sockets": Object {
    "http": Object {
      "total": 0,
    },
    "https": Object {
      "total": 0,
    },
  },
}
`;

exports[`Metrics Collector collection should update stats with new data 1`] = `
Object {
  "collection_interval_in_millis": "test-123",
  "concurrent_connections": 0,
  "event_loop_delay": 0.33843398094177246,
  "kibana": Object {
    "host": "test-123",
    "name": "test-123",
    "snapshot": false,
    "status": "green",
    "transport_address": "test-123:3000",
    "uuid": "test-123",
    "version": "test-123",
  },
  "last_updated": "2018-04-19T21:50:54.366Z",
  "os": Object {
    "cpu": Object {
      "load_average": Object {
        "15m": 1.8154296875,
        "1m": 1.68017578125,
        "5m": 1.7685546875,
      },
    },
    "mem": Object {
      "free_in_bytes": 12,
      "total_in_bytes": 24,
    },
    "uptime_ms": NaN,
  },
  "process": Object {
    "mem": Object {
      "external_in_bytes": 25028,
      "heap_max_in_bytes": 15548416,
      "heap_used_in_bytes": 12911128,
      "resident_set_size_in_bytes": 35307520,
    },
    "pid": 7777,
    "uptime_ms": 6666000,
  },
  "requests": Object {
    "disconnects": 0,
    "status_codes": Object {
      "200": 4,
    },
    "total": 4,
  },
  "response_times": Object {
    "avg_in_millis": 13,
    "max_in_millis": 13,
  },
  "sockets": Object {
    "http": Object {
      "total": 0,
    },
    "https": Object {
      "total": 0,
    },
  },
}
`;

exports[`Metrics Collector initialize should return stub metrics 1`] = `
Object {
  "kibana": Object {
    "host": "test-123",
    "name": "test-123",
    "snapshot": false,
    "status": "green",
    "transport_address": "test-123:3000",
    "uuid": "test-123",
    "version": "test-123",
  },
  "os": Object {
    "cpu": Object {},
    "mem": Object {},
  },
  "process": Object {
    "mem": Object {},
  },
  "requests": Object {
    "status_codes": Object {},
  },
  "response_times": Object {},
  "sockets": Object {
    "http": Object {},
    "https": Object {},
  },
}
`;
